[package]
name = "ray-tracing-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# target = "x86_64-pc-windows-gnu"


[dependencies]
image = "0.23.7"
nalgebra = "0.31.0"
rand = "0.8.5"
rayon = "1.5"
raylib = "3.7.0"
