[package]
name = "ray_tracing_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# target = "x86_64-pc-windows-gnu"

[target.x]
[dependencies]
image = "0.23.7"
nalgebra = "0.31.0"

raylib = "3.7.0"
indicatif = { version = "0.15", features = ["rayon"] }
rand = "0.7.3"
rayon = "1.3.0"
png = "0.17.10"
egui = "0.16.1"
eframe = "0.16.0"
